crates/pg_syntax/tests/snapshots/postgres_regress/box@29.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT height(f1), width(f1) FROM BOX_TBL;"
---
SelectStmt@0..42
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..16
    FuncCall@7..16
      Ident@7..13 "height"
      Ascii40@13..14 "("
      ColumnRef@14..16
        Ident@14..16 "f1"
  Ascii41@16..17 ")"
  Ascii44@17..18 ","
  Whitespace@18..19 " "
  ResTarget@19..27
    FuncCall@19..27
      Ident@19..24 "width"
      Ascii40@24..25 "("
      ColumnRef@25..27
        Ident@25..27 "f1"
  Ascii41@27..28 ")"
  Whitespace@28..29 " "
  From@29..33 "FROM"
  Whitespace@33..34 " "
  RangeVar@34..41
    Ident@34..41 "BOX_TBL"
  Ascii59@41..42 ";"

