crates/pg_syntax/tests/snapshots/postgres_regress/box@3.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO BOX_TBL (f1) VALUES ('(1.0,1.0,3.0,3.0)');"
---
InsertStmt@0..54
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..19
    Ident@12..19 "BOX_TBL"
  Whitespace@19..20 " "
  Ascii40@20..21 "("
  ResTarget@21..23
    Ident@21..23 "f1"
  Ascii41@23..24 ")"
  Whitespace@24..25 " "
  SelectStmt@25..52
    Values@25..31 "VALUES"
    Whitespace@31..32 " "
    Ascii40@32..33 "("
    List@33..52
      AConst@33..52
        Sconst@33..52 "'(1.0,1.0,3.0,3.0)'"
  Ascii41@52..53 ")"
  Ascii59@53..54 ";"

