crates/pg_syntax/tests/snapshots/postgres_regress/box@31.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO box_temp\n\tSELECT box(point(i, i), point(i * 2, i * 2))\n\tFROM generate_series(1, 50) AS i;"
---
InsertStmt@0..101
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "box_temp"
  Newline@20..21 "\n"
  Newline@21..22 "\t"
  SelectStmt@22..100
    Select@22..28 "SELECT"
    Whitespace@28..29 " "
    ResTarget@29..64
      FuncCall@29..64
        Ident@29..32 "box"
        Ascii40@32..33 "("
        FuncCall@33..43
          Ident@33..38 "point"
          Ascii40@38..39 "("
          ColumnRef@39..40
            Ident@39..40 "i"
          Ascii44@40..41 ","
          Whitespace@41..42 " "
          ColumnRef@42..43
            Ident@42..43 "i"
        Ascii41@43..44 ")"
        Ascii44@44..45 ","
        Whitespace@45..46 " "
        FuncCall@46..64
          Ident@46..51 "point"
          Ascii40@51..52 "("
          AExpr@52..57
            ColumnRef@52..53
              Ident@52..53 "i"
            Whitespace@53..54 " "
            Ascii42@54..55 "*"
            Whitespace@55..56 " "
            AConst@56..57
              Iconst@56..57 "2"
          Ascii44@57..58 ","
          Whitespace@58..59 " "
          AExpr@59..64
            ColumnRef@59..60
              Ident@59..60 "i"
            Whitespace@60..61 " "
            Ascii42@61..62 "*"
            Whitespace@62..63 " "
            AConst@63..64
              Iconst@63..64 "2"
    Ascii41@64..65 ")"
    Ascii41@65..66 ")"
    Newline@66..67 "\n"
    Newline@67..68 "\t"
    From@68..72 "FROM"
    Whitespace@72..73 " "
    RangeFunction@73..100
      List@73..94
        FuncCall@73..94
          Ident@73..88 "generate_series"
          Ascii40@88..89 "("
          AConst@89..90
            Iconst@89..90 "1"
          Ascii44@90..91 ","
          Whitespace@91..92 " "
          AConst@92..94
            Iconst@92..94 "50"
      Ascii41@94..95 ")"
      Whitespace@95..96 " "
      Alias@96..100
        As@96..98 "AS"
        Whitespace@98..99 " "
        Ident@99..100 "i"
  Ascii59@100..101 ";"

