crates/pg_syntax/tests/snapshots/postgres_regress/box@32.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE INDEX box_spgist ON box_temp USING spgist (f1);
---
IndexStmt@0..54
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Index@7..12 "INDEX"
  Whitespace@12..13 " "
  Ident@13..23 "box_spgist"
  Whitespace@23..24 " "
  On@24..26 "ON"
  Whitespace@26..27 " "
  RangeVar@27..35
    Ident@27..35 "box_temp"
  Whitespace@35..36 " "
  Using@36..41 "USING"
  Whitespace@41..42 " "
  Ident@42..48 "spgist"
  Whitespace@48..49 " "
  Ascii40@49..50 "("
  IndexElem@50..52
    Ident@50..52 "f1"
  Ascii41@52..53 ")"
  Ascii59@53..54 ";"

