crates/pg_syntax/tests/snapshots/postgres_regress/box@33.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO box_temp\n\tVALUES (NULL),\n\t\t   ('(0,0)(0,100)'),\n\t\t   ('(-3,4.3333333333)(40,1)'),\n\t\t   ('(0,100)(0,infinity)'),\n\t\t   ('(-infinity,0)(0,infinity)'),\n\t\t   ('(-infinity,-infinity)(infinity,infinity)');"
---
InsertStmt@0..210
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "box_temp"
  Newline@20..21 "\n"
  Newline@21..22 "\t"
  SelectStmt@22..208
    Values@22..28 "VALUES"
    Whitespace@28..29 " "
    Ascii40@29..30 "("
    List@30..34
      AConst@30..34
        NullP@30..34 "NULL"
    Ascii41@34..35 ")"
    Ascii44@35..36 ","
    Newline@36..37 "\n"
    Newline@37..39 "\t\t"
    Whitespace@39..42 "   "
    Ascii40@42..43 "("
    List@43..57
      AConst@43..57
        Sconst@43..57 "'(0,0)(0,100)'"
    Ascii41@57..58 ")"
    Ascii44@58..59 ","
    Newline@59..60 "\n"
    Newline@60..62 "\t\t"
    Whitespace@62..65 "   "
    Ascii40@65..66 "("
    List@66..91
      AConst@66..91
        Sconst@66..91 "'(-3,4.3333333333)(40 ..."
    Ascii41@91..92 ")"
    Ascii44@92..93 ","
    Newline@93..94 "\n"
    Newline@94..96 "\t\t"
    Whitespace@96..99 "   "
    Ascii40@99..100 "("
    List@100..121
      AConst@100..121
        Sconst@100..121 "'(0,100)(0,infinity)'"
    Ascii41@121..122 ")"
    Ascii44@122..123 ","
    Newline@123..124 "\n"
    Newline@124..126 "\t\t"
    Whitespace@126..129 "   "
    Ascii40@129..130 "("
    List@130..157
      AConst@130..157
        Sconst@130..157 "'(-infinity,0)(0,infi ..."
    Ascii41@157..158 ")"
    Ascii44@158..159 ","
    Newline@159..160 "\n"
    Newline@160..162 "\t\t"
    Whitespace@162..165 "   "
    Ascii40@165..166 "("
    List@166..208
      AConst@166..208
        Sconst@166..208 "'(-infinity,-infinity ..."
  Ascii41@208..209 ")"
  Ascii59@209..210 ";"

